# claw-code

./: .claw-todos.md  .env.example  .gitignore  GETTING-STARTED.md  PARITY-PLAN.md  PATHWISE-HARNESS-PLAN.md  README.md  capability_map.json  claw  cli.py  config.py  eval_cli.py  meeting_notes_template.md  pyproject.toml  repl.py  requirements.txt  router_cli.py
benchmarks/business/: biz-001-proposal-draft.yaml  biz-002-meeting-notes.md  biz-002-meeting-notes.yaml  biz-003-competitor-analysis.yaml  biz-004-financial-summary.yaml  biz-005-marketing-copy.yaml
benchmarks/elearning/: el-001-storyboard-section.yaml  el-002-action-map.yaml  el-003-accessibility-review.yaml  el-004-assessment-items.yaml  el-005-branching-scenario.yaml
benchmarks/engineering/: eng-001-bugfix-python.yaml  eng-002-bugfix-js.yaml  eng-003-add-tests.yaml  eng-004-refactor-class.yaml  eng-005-new-module.yaml  eng-006-api-endpoint.yaml  eng-007-error-handling.yaml  eng-008-config-parser.yaml  eng-009-data-transform.yaml  eng-010-cli-tool.yaml
experiments/exp-qwen-v1/: README.md
experiments/exp-qwen-v2/: README.md
profiles/: mercury-2.yaml  minimax-m2.7.yaml  qwen-3.5-local.yaml  qwen-local.yaml  qwen-local_engineering.yaml  qwen-local_engineering_v2.yaml  qwen-local_improved.yaml  sonnet.yaml
scripts/: build_capability_map.py  test_routing.py
src/: session_store.py
src/cli/: print.py  (+4 more)
tests/: test_bridge.py  test_context_pipeline.py  test_guardrails.py  test_hardening.py  test_keybindings.py  test_raw_unwrap.py  test_services.py  test_session_persistence.py  test_state.py  test_utils.py
(+141 files in other folders)
