[project]
name = "pathwise-harness"
version = "0.1.0"
description = "Pathwise Adaptive Harness — multi-model coding agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
]

[project.scripts]
harness = "cli:main"
claw-code = "repl:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
